--- a/WEB-INF/classes/JKEDB.properties
+++ b/WEB-INF/classes/JKEDB.properties
@@ -9,8 +9,8 @@
 jdbc.dbms=mysql
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.protocol=jdbc\:mysql\:
-jdbc.hostname=node1.qa
+jdbc.hostname=us-cdbr-iron-east-02.cleardb.net
 jdbc.port=3306
-jdbc.dbname=JKEDB
-jdbc.user=jke_user
-jdbc.password=password
+jdbc.dbname=ad_a479c87fd3f47cb
+jdbc.user=b0edc903c3d173
+jdbc.password=8044b2ba
